--- a/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-ui/pom.xml
+++ b/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-ui/pom.xml
@@ -32,8 +32,8 @@
     <packaging.type>pom</packaging.type>
     <webappTgtDir>${basedir}/target/src/main/webapp</webappTgtDir>
     <node.executable>node</node.executable>
-    <nodeVersion>v0.12.2</nodeVersion>
-    <npmVersion>2.10.0</npmVersion>
+    <nodeVersion>v4.4.5</nodeVersion>
+    <npmVersion>2.15.5</npmVersion>
     <keep-ui-build-cache>false</keep-ui-build-cache>
   </properties>
 
@@ -120,41 +120,47 @@
             </executions>
           </plugin>
 
+          <plugin>
+            <groupId>com.github.eirslett</groupId>
+            <artifactId>frontend-maven-plugin</artifactId>
+            <configuration>
+              <workingDirectory>${webappTgtDir}</workingDirectory>
+            </configuration>
+            <executions>
+              <execution>
+                <phase>generate-sources</phase>
+                <id>install node and npm</id>
+                <goals>
+                  <goal>install-node-and-npm</goal>
+                </goals>
+                <configuration>
+                  <nodeVersion>${nodeVersion}</nodeVersion>
+                  <npmVersion>${npmVersion}</npmVersion>
+                </configuration>
+              </execution>
+              <execution>
+                <phase>generate-sources</phase>
+                <id>npm install</id>
+                <goals>
+                  <goal>npm</goal>
+                </goals>
+              </execution>
+              <execution>
+                <phase>generate-sources</phase>
+                <id>bower install</id>
+                <goals>
+                  <goal>bower</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+
 
           <!-- Bower install & grunt build-->
           <plugin>
             <artifactId>exec-maven-plugin</artifactId>
             <groupId>org.codehaus.mojo</groupId>
             <executions>
-              <execution>
-                <phase>generate-sources</phase>
-                <id>npm install</id>
-                <goals>
-                  <goal>exec</goal>
-                </goals>
-                <configuration>
-                  <workingDirectory>${webappTgtDir}</workingDirectory>
-                  <executable>npm</executable>
-                  <arguments>
-                    <argument>install</argument>
-                  </arguments>
-                </configuration>
-              </execution>
-              <execution>
-                <phase>generate-sources</phase>
-                <id>bower install</id>
-                <goals>
-                  <goal>exec</goal>
-                </goals>
-                <configuration>
-                  <workingDirectory>${webappTgtDir}</workingDirectory>
-                  <executable>bower</executable>
-                  <arguments>
-                    <argument>--allow-root</argument>
-                    <argument>install</argument>
-                  </arguments>
-                </configuration>
-              </execution>
               <execution>
                 <id>ember build</id>
                 <phase>generate-sources</phase>
