--- a/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-ui/src/main/webapp/package.json
+++ b/hadoop-yarn-project/hadoop-yarn/hadoop-yarn-ui/src/main/webapp/package.json
@@ -18,12 +18,13 @@
   "author": "",
   "license": "Apache",
   "devDependencies": {
+    "bower": "1.7.7",
     "broccoli-asset-rev": "2.4.2",
     "broccoli-funnel": "1.0.1",
-    "em-table": "0.1.6",
-    "ember-bootstrap": "0.5.1",
+    "broccoli-merge-trees": "1.1.1",
     "ember-array-contains-helper": "1.0.2",
-    "ember-cli": "1.13.13",
+    "ember-bootstrap": "0.5.1",
+    "ember-cli": "^1.13.13",
     "ember-cli-app-version": "1.0.0",
     "ember-cli-babel": "5.1.6",
     "ember-cli-content-security-policy": "0.4.0",
@@ -33,6 +34,8 @@
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "1.4.0",
     "ember-cli-jquery-ui": "0.0.20",
+    "ember-cli-moment-shim": "0.7.3",
+    "ember-cli-numeral": "^0.2.0",
     "ember-cli-qunit": "1.2.1",
     "ember-cli-release": "0.2.8",
     "ember-cli-sri": "1.2.1",
@@ -47,6 +50,7 @@
     "select2": "4.0.0"
   },
   "dependencies": {
-    "em-helpers": "^0.5.13"
+    "em-helpers": "^0.8.0",
+    "em-table": "^0.7.0"
   }
 }
