--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -1322,7 +1322,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-javadoc-plugin</artifactId>
-          <version>2.8.1</version>
+          <version>${maven-javadoc-plugin.version}</version>
           <configuration>
             <additionalparam>-Xmaxwarns 10000</additionalparam>
           </configuration>
