HADOOP-14087. S3A typo in pom.xml test exclusions. Contributed by Aaron Fabbri.
(cherry picked from commit f597f4c43e0a6e2304b9bcaf727d6d8d15a365f9)
(cherry picked from commit d2d0872f4d109b09cdc3d8e9b163544e56469621)

--- a/hadoop-tools/hadoop-aws/pom.xml
+++ b/hadoop-tools/hadoop-aws/pom.xml
@@ -183,7 +183,7 @@
                     <exclude>**/ITestJets3tNativeS3FileSystemContract.java</exclude>
                     <exclude>**/ITest*Root*.java</exclude>
                     <exclude>**/ITestS3AFileContextStatistics.java</exclude>
-                    <include>**/ITestS3AHuge*.java</include>
+                    <exclude>**/ITestS3AHuge*.java</exclude>
                   </excludes>
                 </configuration>
               </execution>
