YARN-5829 Add resource aggregation to scheduler node

--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -835,6 +835,11 @@
         <version>3.2.2</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-collections4</artifactId>
+        <version>4.1</version>
+      </dependency>
+      <dependency>
         <groupId>commons-beanutils</groupId>
         <artifactId>commons-beanutils</artifactId>
         <version>1.9.3</version>
