HDFS-10394. move declaration of okhttp version from hdfs-client to hadoop-project POM. Contributed by Xiaobing Zhou.

--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -135,6 +135,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.squareup.okhttp</groupId>
+        <artifactId>okhttp</artifactId>
+        <version>2.4.0</version>
+      </dependency>
+      <dependency>
         <groupId>jdiff</groupId>
         <artifactId>jdiff</artifactId>
         <version>${jdiff.version}</version>
