--- a/hadoop-common-project/hadoop-common/src/main/conf/log4j.properties
+++ b/hadoop-common-project/hadoop-common/src/main/conf/log4j.properties
@@ -324,6 +324,7 @@ log4j.appender.EWMA.maxUniqueMessages=${yarn.ewma.maxUniqueMessages}
 
 # Fair scheduler requests log on state dump
 log4j.logger.org.apache.hadoop.yarn.server.resourcemanager.scheduler.fair.FairScheduler.statedump=DEBUG,FSLOGGER
+log4j.additivity.org.apache.hadoop.yarn.server.resourcemanager.scheduler.fair.FairScheduler.statedump=false
 log4j.appender.FSLOGGER=org.apache.log4j.RollingFileAppender
 log4j.appender.FSLOGGER.File=${hadoop.log.dir}/fairscheduler-statedump.log
 log4j.appender.FSLOGGER.layout=org.apache.log4j.PatternLayout
