--- a/hadoop-mapreduce-project/pom.xml
+++ b/hadoop-mapreduce-project/pom.xml
@@ -195,6 +195,7 @@
           <excludes>
             <exclude>.eclipse.templates/</exclude>
             <exclude>lib/jdiff/**</exclude>
+            <exclude>dev-support/jdiff/**</exclude>
           </excludes>
         </configuration>
       </plugin>
