MAPREDUCE-6868. License check for jdiff output files should be ignored. Contributed by Akira Ajisaka.

--- a/hadoop-mapreduce-project/pom.xml
+++ b/hadoop-mapreduce-project/pom.xml
@@ -194,6 +194,7 @@
           <excludes>
             <exclude>.eclipse.templates/</exclude>
             <exclude>lib/jdiff/**</exclude>
+            <exclude>dev-support/jdiff/**</exclude>
           </excludes>
         </configuration>
       </plugin>
