--- a/hadoop-project/pom.xml
+++ b/hadoop-project/pom.xml
@@ -121,6 +121,7 @@
     <native-maven-plugin.version>1.0-alpha-8</native-maven-plugin.version>
     <surefire.fork.timeout>900</surefire.fork.timeout>
     <aws-java-sdk.version>1.11.86</aws-java-sdk.version>
+    <hsqldb.version>2.3.4</hsqldb.version>
   </properties>
 
   <dependencyManagement>
@@ -915,7 +916,7 @@
       <dependency>
         <groupId>org.hsqldb</groupId>
         <artifactId>hsqldb</artifactId>
-        <version>2.0.0</version>
+        <version>${hsqldb.version}</version>
       </dependency>
       <dependency>
         <groupId>com.codahale.metrics</groupId>
