HADOOP-14321. explicitly exclude s3a root dir ITests from parallel runs. Contributed by Steve Loughran

--- a/hadoop-tools/hadoop-aws/pom.xml
+++ b/hadoop-tools/hadoop-aws/pom.xml
@@ -181,7 +181,8 @@
                   </includes>
                   <excludes>
                     <exclude>**/ITestJets3tNativeS3FileSystemContract.java</exclude>
-                    <exclude>**/ITest*Root*.java</exclude>
+                    <exclude>**/ITestS3AContractRootDir.java</exclude>
+                    <exclude>**/ITestS3NContractRootDir.java</exclude>
                     <exclude>**/ITestS3AFileContextStatistics.java</exclude>
                     <exclude>**/ITestS3AEncryptionSSE*.java</exclude>
                     <exclude>**/ITestS3AHuge*.java</exclude>
@@ -209,7 +210,8 @@
                   <!-- parallel execution. -->
                   <includes>
                     <include>**/ITestJets3tNativeS3FileSystemContract.java</include>
-                    <include>**/ITest*Root*.java</include>
+                    <include>**/ITestS3AContractRootDir.java</include>
+                    <include>**/ITestS3NContractRootDir.java</include>
                     <include>**/ITestS3AFileContextStatistics.java</include>
                     <include>**/ITestS3AHuge*.java</include>
                     <include>**/ITestS3AEncryptionSSE*.java</include>
