shading guava completely
Signed-off-by: Tsuyoshi Ozawa <ozawa@apache.org>

--- a/hadoop-client-modules/hadoop-client-runtime/pom.xml
+++ b/hadoop-client-modules/hadoop-client-runtime/pom.xml
@@ -35,9 +35,7 @@
   </properties>
 
   <dependencies>
-    <!-- shading here instead of using hadoop-shaded-thirdparty to avoid shading Guava
-         completely.
-         -->
+    <!-- Need this until correction of MSHADE-36 -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
