--- a/hadoop-client-modules/hadoop-client-api/pom.xml
+++ b/hadoop-client-modules/hadoop-client-api/pom.xml
@@ -35,11 +35,21 @@
   </properties>
 
   <dependencies>
+    <!-- Need this until correction of MSHADE-36 -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <scope>provided</scope>
     </dependency>
+    <!-- Need this to comment out until correction of MSHADE-36 -->
+    <!--
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-shaded-thirdparty</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    -->
+
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
